--- a/Aplicativo Primeiro/www/css/index_main.less.css
+++ b/Aplicativo Primeiro/www/css/index_main.less.css
@@ -4524,3 +4524,26 @@ label:empty {
     min-height: 142px;
   }
 }
+.uib_row_14:not(.cright) > .col {
+  padding-right: 20px;
+}
+.uib_row_14.cright > .col {
+  padding-left: 20px;
+}
+@media all {
+  .col-0_12-12 {
+    width: auto;
+    float: none !important;
+  }
+  .urow:not(.cright) > .col-0_12-12 {
+    padding-right: 0px !important;
+  }
+  .urow.cright > .col-0_12-12 {
+    padding-left: 0px !important;
+  }
+}
+@media all and (min-width: 320px) {
+  .row-height-14 > .col > .content-area {
+    min-height: 100px;
+  }
+}
