--- a/Appost/www/css/index/index_main.less
+++ b/Appost/www/css/index/index_main.less
@@ -108,3 +108,6 @@
 @import "styles/row-height-13 -- row_height.less";
 @import "uib_row_14.less";
 @import "styles/row-height-14 -- row_height.less";
+
+@import "styles/row-height-15 -- row_height.less";
+@import "styles/footer-bg -- background.less";
