--- a/Appost/www/css/index/styles/footer-bg -- background.less
+++ b/Appost/www/css/index/styles/footer-bg -- background.less
@@ -1,8 +1,9 @@
 @media all {
-.header-bg { background-color:rgb(255,0,0);
+.footer-bg { background-color:rgb(102,102,102);
 background-position:center center;
 background-repeat:no-repeat;
 background-attachment:scroll;
  }
 }
+
 
